added chmod x to executable in dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang
 
 RUN go get gopkg.in/mgo.v2 \
-    && git clone https://github.com/ryanhartje/gopot /tmp/gopot
+    && git clone https://github.com/ryanhartje/gopot /tmp/gopot \
+    && chown +x /tmp/gopot/wp
 
 EXPOSE "80"
 
