setting ipv4 listen address

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,8 @@ FROM golang
 
 RUN go get gopkg.in/mgo.v2 \
     && git clone https://github.com/ryanhartje/gopot /tmp/gopot \
-    && chown +x /tmp/gopot/wp
+    && cd /tmp/gopot \
+    && go build wp.go
 
 EXPOSE "80"
 
